<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings.SettingsFragment"
    tools:ignore="RtlHardcoded,RtlSymmetry"
    android:background="#FFFFFF">

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_46sdp"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/textView"
        android:layout_width="97dp"
        android:layout_height="46dp"
        android:fontFamily="@font/segoe"
        android:text="Setting"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="#000"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imagebuttonsetting1"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/round"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_150sdp" />
        <ImageButton
            android:id="@+id/imagebuttonsetting2"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/cart"
            android:layout_marginTop="@dimen/_15sdp"/>

    </LinearLayout>-->
    <!--<ImageView
        android:id="@+id/iv_separator1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="32dp"
        android:src="#dedede" />-->

    <LinearLayout
        android:id="@+id/ll_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:paddingTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/ic_avatar"/>

        <LinearLayout
            android:id="@+id/ll_profile_details"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text=""
                android:textSize="@dimen/_14ssp"/>

            <TextView
                android:id="@+id/tv_profile_mail_id"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/_14ssp"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="#dedede"/>

    <RelativeLayout
        android:id="@+id/rl_about_sva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginHorizontal="@dimen/_13sdp">

        <ImageView
            android:id="@+id/iv_about_sva"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:src="@drawable/ic_sva" />

        <TextView
            android:id="@+id/tv_about_sva"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_toRightOf="@id/iv_about_sva"
            android:paddingBottom="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_13sdp"
            android:gravity="center"
            android:fontFamily="@font/arial"
            android:text="@string/about_svakatha"
            android:textSize="@dimen/_14sdp"
            android:textColor="#858585"
            android:textStyle="bold"/>
        
        <ImageView
            android:layout_width="@dimen/_13sdp"
            android:layout_height="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_right"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_about_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_13sdp"
        android:layout_marginHorizontal="@dimen/_13sdp">

        <ImageView
            android:id="@+id/iv_about_app"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:src="@drawable/ic_about" />

        <TextView
            android:id="@+id/tv_about_app"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_toRightOf="@id/iv_about_app"
            android:paddingBottom="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_13sdp"
            android:gravity="center"
            android:fontFamily="@font/arial"
            android:textColor="#858585"
            android:text="@string/about_our_application"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="@dimen/_13sdp"
            android:layout_height="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_right"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_13sdp"
        android:layout_marginHorizontal="@dimen/_13sdp">

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:src="@drawable/ic_share" />

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_toRightOf="@id/iv_share"
            android:paddingBottom="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_13sdp"
            android:textColor="#858585"
            android:gravity="center"
            android:text="@string/share_and_earn"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/arial"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="@dimen/_13sdp"
            android:layout_height="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_right"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_Contact_Us"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="#dedede"
        android:layout_marginTop="@dimen/_25sdp"
        android:paddingLeft="@dimen/_18sdp"
        android:text="@string/contact_us"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center_vertical"/>

    <LinearLayout
        android:id="@+id/ll_help"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_74sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_help"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_18sdp"
            android:src="@drawable/ic_help"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/arial"
            android:layout_marginLeft="@dimen/_20sdp"
            android:text="@string/help"
            android:textColor="#858585"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_21sdp"
        android:ellipsize="none"
        android:gravity="center"
        android:scrollHorizontally="false"
        android:text="@string/direct_help"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"/>

</LinearLayout>